# mender-update-modules

banner/: README.md
banner/module/: banner
banner/module-artifact-gen/: banner-artifact-gen
corrosion/: README.md
corrosion/module/: Cargo.toml
corrosion/module-artifact-gen/: corrosion-artifact-gen
corrosion/module/src/: main.rs  mender_update_module.rs
multifile/module/: multifile
