[package]
name = "corrosion"
description = "A scaffolding/example Update Module for the Mender OTA solution"
homepage = "https://mender.io"
repository = "https://github.com/mendersoftware/mender-update-modules/corrosion/module"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]